# xTorrent

./: CMakeLists.txt  README.md  your_program.sh
src/: bencode.cpp  bencode.hpp  main  main.cpp  torrent_parser.cpp  torrent_parser.hpp
test/: test_bencode.cpp  test_torrent_parser.cpp
test_data/: sample1.torrent  sample2.torrent  sample3.torrent
